<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:scrollbars="vertical"
    android:background="@drawable/abu">

    <TextView
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/person"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="Hi, User"
        android:id="@+id/tv_welcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/menu"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btn_senin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_senin"
        android:text="@string/senin"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_selasa"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_selasa"
        android:text="@string/selasa"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_rabu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_rabu"
        android:text="@string/rabu"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_kamis"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_kamis"
        android:text="@string/kamis"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_jumat"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_jumat"
        android:text="@string/jumat"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_sabtu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_sabtu"
        android:text="@string/sabtu"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_minggu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_register"
        android:text="@string/minggu"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>

    <ImageButton
        android:id="@+id/ib_setting"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:background="@drawable/setting"
        android:layout_marginTop="32dp"
        tools:ignore="ContentDescription" />

</LinearLayout>