<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/abu">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/remainderme_text"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:background="@android:color/transparent"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:hint="@string/email"
        android:textColorHint="#fff"
        android:maxLines="1"
        android:drawableStart="@drawable/person"
        android:layout_marginTop="80dp"
        tools:ignore="Autofill" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f9d7db" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="8dp"
        android:textColorHint="#fff"
        tools:ignore="Autofill" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f9d7db" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@drawable/background_login"
        android:text="@string/login"
        android:textColor="#f16f7d"
        android:textAllCaps="false"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_marginTop="64dp"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_register"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_register"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp" />
</LinearLayout>
